fixed footer line height
responsiveness was off, text was overlapping 
changed line height from .5 to 1.1

--- a/style.css
+++ b/style.css
@@ -110,7 +110,7 @@ ul{
 }
 .footer p{
     font-size: 0.75em;
-    line-height: 0.50;
+    line-height: 1.1;
     text-align: right;
 }
 .footer a{
